--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
 ACCESS_TOKEN_SECRET = 23fads23dsf3dfwasds23sdsa2sadasd23sadsd
+
+COUNDINARY_CLOUD_NAME = dw7davv2x
+COUNDINARY_API_KEY = 395339763735486
+COUNDINARY_API_SECRET = vjq5jnSr6xoxJIw8M909gthyFb4
